Harden policy validator CLI execution loop